<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="348dp"
        android:layout_height="667dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4">

        <Button
            android:id="@+id/button1"
            android:background="@android:color/background_light"
            android:onClick="translate"
            android:tag="doyouspeakenglish"
            android:text="@string/do_you_speak_nenglish"
            android:textColor="#3742fa"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            android:background="#3742fa"
            android:onClick="translate"
            android:tag="goodevening"
            android:text="@string/good_evening"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            android:background="#3742fa"
            android:onClick="translate"
            android:tag="hello"
            android:text="@string/hello"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button4"
            android:background="@android:color/background_light"
            android:onClick="translate"
            android:tag="howareyou"
            android:text="@string/how_are_you"
            android:textColor="#3742fa"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"
            android:background="@android:color/background_light"
            android:onClick="translate"
            android:tag="ilivein"
            android:text="@string/i_live_in"
            android:textColor="#3742fa"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"
            android:background="#3742fa"
            android:onClick="translate"
            android:tag="mynameis"
            android:text="@string/my_name_is"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button7"
            android:background="#3742fa"
            android:onClick="translate"
            android:tag="please"
            android:text="@string/please"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"
            android:background="@android:color/background_light"
            android:onClick="translate"
            android:tag="welcome"
            android:text="@string/welcome"
            android:textColor="#3742fa"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>